--- a/KagglePractice/breastCancerClassification.ipynb
+++ b/KagglePractice/breastCancerClassification.ipynb
@@ -1320,14 +1320,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "eb98e05f-09a4-4efb-9a44-b2fd061dab7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(estimator=SVC(),\n",
+       "             param_grid={'C': [0.01, 0.05, 0.5, 0.1, 1, 10, 15, 20],\n",
+       "                         'gamma': [0.0001, 0.001, 0.01, 0.1]})"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Support vector classifier (SVC)\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "svc = SVC()\n",
+    "parameters = {'gamma': [0.0001, 0.001, 0.01, 0.1], \n",
+    "              'C': [0.01, 0.05, 0.5, 0.1, 1, 10, 15, 20]}\n",
+    "grid_search = GridSearchCV(svc, parameters)\n",
+    "grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "2a386cfc-fbf5-49fd-b084-24f2d4b28ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 10, 'gamma': 0.01}"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# best parameters\n",
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "8b7b6cbb-5d64-4a13-9023-1a3d2ec37bc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9774683544303798"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# best accuracy\n",
+    "grid_search.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "4a11101e-afcc-496c-a1c5-3b11fd18fc13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=10, gamma=0.01)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svc = SVC(C = 10, gamma = 0.01)\n",
+    "svc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "009f31b4-ad55-4e1c-b71d-aacc1ce11dab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Support vector classifier (SVC)\n",
-    "from sklearn.svm import SVC"
+    "# model predictions\n",
+    "y_pred = svc.predict(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "885d108f-be04-4cde-9b50-b6945767ea47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9874371859296482\n",
+      "0.9766081871345029\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accuracy score\n",
+    "print(accuracy_score(y_train, svc.predict(X_train)))\n",
+    "svc_acc = accuracy_score(y_test, svc.predict(X_test))\n",
+    "print(svc_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "c8122d39-8239-4567-b980-00e033bd47f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[107   1]\n",
+      " [  3  60]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "783bb4de-30fd-4e12-804d-10d4599813c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.99      0.98       108\n",
+      "           1       0.98      0.95      0.97        63\n",
+      "\n",
+      "    accuracy                           0.98       171\n",
+      "   macro avg       0.98      0.97      0.97       171\n",
+      "weighted avg       0.98      0.98      0.98       171\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calssification report \n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c6bda4c-5db9-4a17-a448-574b66a25e69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
