--- a/npArrayPractice.ipynb
+++ b/npArrayPractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "51fe9805-ea71-47bf-a977-9b3c05e603b0",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "array([1, 3, 5])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,6 +21,36 @@
     "import numpy as np\n",
     "x = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
     "x[1:6:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3ffaee2c-01ed-4bda-a61d-cfced73ce922",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = np.array(range(0,10))\n",
+    "print(x1)\n",
+    "x1.shape"
    ]
   },
   {
@@ -288,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
