updating from my Mac

--- a/class_funcion_practice.ipynb
+++ b/class_funcion_practice.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "14d11f03-7371-4659-8b05-4ab6d2b18313",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "046cc105-0464-4ec1-bf9b-668859fb0532",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "b35e5c89-140c-4fa5-944f-ccbacf21d026",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "'hello world'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "395dc685-b53d-4ff8-aa41-7de8154cf728",
    "metadata": {},
    "outputs": [
@@ -114,13 +114,13 @@
        "0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "C.f('min', 1, -1)"
+    "C.f('self',1, -1)"
    ]
   },
   {
