updating from my mac

--- a/API/7.2.5 - API Mini Project/api_data_wrangling_mini_project.ipynb
+++ b/API/7.2.5 - API Mini Project/api_data_wrangling_mini_project.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
-    "API_KEY = 'yNa_iT4y7NxNSrzHygRH'"
+    "API_KEY = 'yourAPIkey'"
    ]
   },
   {
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "res = requests.get(\"https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=2017-01-01&end_date=2017-01-01&collapse=daily&transform=none&api_key=yNa_iT4y7NxNSrzHygRH\")\n",
+    "res = requests.get(\"https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=2017-01-01&end_date=2017-01-01&collapse=daily&transform=none&api_key=yourAPIkey\")\n",
     "print(res.json())"
    ]
   },
