--- a/univariate_multistep_lstm_for_power_usage.ipynb
+++ b/univariate_multistep_lstm_for_power_usage.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "univariate_multistep_lstm_for_power_usage.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPYVXMwl9o/JEUGmWvJH32f",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNhMMz6ZCOsx05d+hRxQp6Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,9 +35,18 @@
         "id": "A-scxGW0fhVd"
       },
       "source": [
-        "import keras"
+        "# univariate multi-step lstm for the power usage dataset\n",
+        "from math import sqrt\n",
+        "from numpy import split\n",
+        "from numpy import array\n",
+        "from pandas import read_csv\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense\n",
+        "from keras.layers import LSTM\n",
+        "import os"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
